fixed viewport responsiveness on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -194,7 +194,7 @@ img {
   top: 0;
   left: 0;
   right: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 10;
 }
 
